--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -1,18 +1,22 @@
-FROM node:18 as base
+FROM node:18 AS base
 
 LABEL version="0.0.1"
-LABEL name="rocco-web"
-LABEL description="rocco web application"
+LABEL name="rocco-api"
+LABEL description="rocco core api"
 LABEL maintainer="Chase Ponti <cj@ponti.io>"
 LABEL vendor="Ponti & Co, LLC"
 
 RUN apt-get update
 
+# Required for Prisma
+RUN apt-get install -y openssl
+
 # Add the Turbo CLI
 RUN npm install -g turbo
 
 # ------------------------------------------------------------------------------
-FROM base AS builder
+
+FROM base AS pruner
 
 WORKDIR /app
 
@@ -21,35 +25,43 @@ COPY . .
 RUN turbo prune --scope=rocco-web --docker
 
 # ------------------------------------------------------------------------------
-# Copy the lockfile and package.json files of the isolated subworkspace
-FROM base AS installer
+
+FROM base AS builder
+RUN apt-get update
 
 WORKDIR /app
 
 # Copy the lockfile, package files, and of the isolated subworkspace
-COPY --from=builder /app/out/json/ /app/
-COPY --from=builder /app/out/package-lock.json /app/package-lock.json
-COPY --from=builder /app/out/full/ /app/
+COPY --from=pruner /app/out/json/ /app/
+COPY --from=pruner /app/out/package-lock.json /app/package-lock.json
+COPY --from=pruner /app/out/full/ /app/
 
 # Install dependencies
-RUN npm ci
+RUN npm install --frozen-lockfile --prefer-frozen-lockfile --ignore-scripts
 
-# Set default node environment to production
+# Set build-time environment variables
 ARG NODE_ENV=production
 ARG VITE_API_URL
+ARG VITE_GOOGLE_API_KEY
 
-# Copy node environment to the container
+# Set runtime environment variables
 ENV NODE_ENV=${NODE_ENV}
 ENV VITE_API_URL=${VITE_API_URL}
+ENV VITE_GOOGLE_API_KEY=${VITE_GOOGLE_API_KEY}
 
 # Build the app
 RUN turbo run build --filter=rocco-web
 
 # ------------------------------------------------------------------------------
-# Set up a lightweight web server to serve the built app
-FROM nginx:alpine as release
 
-# Copy the built app to the Nginx public directory
-COPY --from=installer /app/apps/web/build /usr/share/nginx/html
+# Stage 2: Serve the built app using Nginx
+FROM nginx:1.21-alpine
 
-# end
+COPY --from=builder /apps/web/build /usr/share/nginx/html
+
+# Use custom nginx config
+COPY apps/web/nginx.conf /etc/nginx/nginx.conf
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
