--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "postinstall": "cypress install",
     "preview:test": "start-server-and-test preview http://localhost:5001",
     "preview": "vite preview",
+    "spotlight": "npx npx spotlight-sidecar",
     "start": "npx http-server build --gzip -a 0.0.0.0 -p $PORT -c 1209600",
     "test:ci": "vitest run",
     "test:coverage": "npx vite preview --outDir coverage/lcov-report",
