--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -53,6 +53,7 @@
   "devDependencies": {
     "@babel/core": "^7.22.9",
     "@testing-library/cypress": "9.0.0",
+    "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "14.0.0",
     "@types/node": "^20.4.5",
     "@types/reach__router": "^1.3.10",
@@ -100,6 +101,7 @@
     "typescript": "^5.1.6",
     "ui": "0.0.0",
     "vite": "^4.4.7",
+    "vite-tsconfig-paths": "^4.2.3",
     "vitest": "^0.33.0"
   },
   "lint-staged": {
