fix: fix Button definition in Idea form

--- a/.github/workflows/deploy-web-preview.yml
+++ b/.github/workflows/deploy-web-preview.yml
@@ -16,6 +16,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Check if workflow_run was successful
+        run: |
+          if [ "${{ github.event.workflow_run.conclusion }}" != "success" ]; then
+            echo "Previous workflow failed. Exiting."
+            exit 78  # Exit code 78 to indicate that the workflow should be skipped
+          fi
+
       - name: 🏗 Set up Node.js
         uses: actions/setup-node@v3
         with:
